[package]
name = "gping"
version = "1.20.2"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
repository = "https://github.com/orf/gping"
license = "MIT"
description = "Ping, but with a graph."
readme = "../readme.md"

[dependencies]
pinger = { version = "^2.1.2", path = "../pinger" }
tui = { package = "ratatui", version = "0.30.1", features = ["crossterm"], default-features = false }
crossterm = "0.29.0"
anyhow = "1.0.101"
chrono = "0.4.43"
itertools = "0.14.0"
clap = { version = "4.5.57", features = ["derive"] }
clap_mangen = "0.3.0"
idna = "1.1.0"
clap-cargo = "0.18.3"
